--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@vercel/analytics": "^1.2.2",
-    "bootstrap": "^5.3.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.0",
+    "@vercel/analytics": "^1.5.0",
+    "bootstrap": "^5.3.8",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.0.0",
+    "react-scroll": "^1.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "install": "^0.13.0",
+    "react-scripts": "^5.0.1"
   }
 }
